--- a/2_font_end/1_tp/index.html
+++ b/2_font_end/1_tp/index.html
@@ -4,18 +4,41 @@
     <title>TP 1</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body>    
     <div class="main">
-      <H1></H1>  
-      <div class="nota">
-        <H1></H1>  
-  
+      <div class="nav">
+        <H1>Entrevistas</H1>  
       </div>
-      <div class="nota">
-        <H1></H1>  
-      </div class="nota">
-      <div>
-        <H1></H1>  
+      <div class="body">
+        <H1>Titulo principal</H1>  
+        <div class="nota">
+          <H2>Titulo secundario</H2>
+          <div class="intro"><p>Nota introductoria, resumen sobre...</p></div>
+          <div class="image">
+            <img src="algo.jpg" alt="">
+
+          </div> 
+        </div>
+        <div class="nota">
+          <H2>Titulo secundario</H2>
+          <div class="intro"><p>Nota introductoria, resumen sobre...</p></div>
+
+          <div class="image">
+            <img src="algo.jpg" alt="">
+
+          </div> 
+
+        </div>
+        <div class="nota">
+          <H2>Titulo secundario</H2>
+          <div class="intro"><p>Nota introductoria, resumen sobre...</p></div>
+
+          <div class="image">
+            <img src="algo.jpg" alt="">
+          </div> 
+        </div>
+      </div>
+      <div class="foot">
       </div>
     </div>
   </body>
