--- a/2_front_end/4_tp/index.html
+++ b/2_front_end/4_tp/index.html
@@ -8,48 +8,49 @@
   <body id="">
     
     <main id="main" class="main conteiner">
-      <div class="tabLink openTab">
-        <a class="" id="defaultOpen"color="red">Home </a>
+      <div class="tabLink openTab " id="defaultOpen" >
+        <a class="" id="0"color="red">Ancestors </a>      
         <a class="closeTab" ><i class="fa fa-times"></i></a>
       </div>
       <!--
       <button class="tabLink" onclick="openPage('Home', this, 'red')">Home</button>
       -->
       <div class="tabLink openTab">
-        <a class="" id="defaultOpen"color="red">News </a>
+        <a class="" id="1"color="blue">Generation 1 </a>
         <a class="closeTab" ><i class="fa fa-times"></i></a>
       </div>
       <div class="tabLink openTab">
-        <a class="" id="defaultOpen"color="red">Contact </a>
+        <a class="" id="2"color="orange">Generation 2 </a>
         <a class="closeTab" ><i class="fa fa-times"></i></a>
       </div>
       <div class="tabLink openTab">
-        <a class="" id="defaultOpen"color="red">About </a>
+        <a class="" id="3"color="green">Generation 3 </a>
         <a class="closeTab" ><i class="fa fa-times"></i></a>
       </div>
-      <div class="tabLink">        
+      <div id="newTab" class="tabLink ">
         <a class="" ><i class="fa fa-plus"></i> </a>
       </div>
 
-      <div id="Home" class="tabContent">
-        <h3>Home</h3>
-        <p>Home is where the heart is..</p>
+      <div id="generation_0" class="tabContent">
+        <h3>Ancestors</h3>
+        <p></p>
       </div>
 
-      <div id="News" class="tabContent">
-        <h3>News</h3>
-        <p>Some news this fine day!</p>
+      <div id="generation_1" class="tabContent">
+        <h3>Son</h3>
+        <p></p>
       </div>
 
-      <div id="Contact" class="tabContent">
-        <h3>Contact</h3>
-        <p>Get in touch, or swing by for a cup of coffee.</p>
+      <div id="generation_2" class="tabContent">
+        <h3>Grandson</h3>
+        <p></p>
       </div>
 
-      <div id="About" class="tabContent">
-        <h3>About</h3>
-        <p>Who we are and what we do.</p>
+      <div id="generation_3" class="tabContent">
+        <h3>Great-grandson</h3>
+        <p></p>
       </div>      
+
     </main>
     <script type="text/javascript" src="jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="funtions.js"></script>
