--- a/2_front_end/7_final_tp/index.html
+++ b/2_front_end/7_final_tp/index.html
@@ -20,40 +20,65 @@
         </p>
       </div>
       <nav>
-
+        <div id="nav" class="nav">
+          <div class="tabLink openTab " id="defaultOpen" >
+            <a class="tabTitle" id="0"color="red"></a>      
+          </div>
+          <!--
+          <button class="tabLink" onclick="openPage('Home', this, 'red')">Home</button>
+          -->
+          <div class="tabLink openTab">
+            <a class="tabTitle" id="1"color="blue"></a>
+          </div>
+          <div class="tabLink openTab">
+            <a class="tabTitle" id="2"color="orange"></a>
+          </div>
+        </div>
       </nav>
     </header>
 
-    <main id="main" class="main conteiner">
-      <div class="tabLink openTab " id="defaultOpen" >
-        <a class="tabTitle" id="0"color="red"></a>      
+    <main >
+      <div id="main" class="main conteiner">
+        <div id="generation_0" class="tabContent">
+          <h3 class="tabCntTitle"></h3>
+          <p>The <b>Kwik-E-Mart</b> is a convenience store in <a href="/wiki/Springfield" title="Springfield">Springfield</a>,
+             managed by <a href="/wiki/Apu_Nahasapeemapetilon" title="Apu Nahasapeemapetilon">Apu Nahasapeemapetilon</a>. 
+             It is run mostly by Apu, but occasionally <a href="/wiki/Sanjay_Nahasapeemapetilon" title="Sanjay Nahasapeemapetilon">Sanjay</a>
+             helps out. In many future predictions, several of his kids have roles in the maintenance of the Kwik-E-Mart, in the same
+             fashion their father does, including using guns as defense, and having outrageous prices.
+          </p>
+          <h3 class="tabCntTitle">Profile</h3>
+          <p>The Kwik-E-Mart isn't all that convenient of a store with <a href="/wiki/Apu_Nahasapeemapetilon" title="Apu Nahasapeemapetilon">Apu</a> 
+            gouging the customers for all they have got. It sells the standard convenience store fare at extraordinarily 
+            high prices, such as milk for $12, "surprisingly expensive penny candy" or last minute Valentine's Day 
+            chocolates for $100 (this would be illegal as it’s considered as price gouging) and including the always 
+            popular tasty frozen soft drink Squishee. One time during a holdup, Apu refused to give
+             <a href="/wiki/Homer_Simpson" title="Homer Simpson">Homer</a> change to call the police from the payphone.
+            Instead, due to the store's policy of "no change without purchase", Apu directed Homer to the cheapest
+            item in the store: a 2 oz bag of Chippos potato chips at $5.99 (to which Homer whispered shouts of "$5.99?
+            What a ripoff! Someone should shoot you!").
+          </p>
+          
+          <h3 class="tabCntTitle">History</h3>
+          <p>The Kwik-E-Mart chain was started somewhere in the Himalayas, where the world's first convenience 
+            store still stands on a mountain peak, an ironically inconvenient location. Visiting pilgrims are 
+            allowed to ask three questions of the resident all-knowing guru (except safe combinations). 
+            Apu's visit was spoiled by Homer's three questions, "Are you really the head of the Kwik-E-Mart?",
+            "Really?" and "You?" The guru answered "yes" to all three of Homer's questions, and refused to 
+            answer any of Apu's, instead saying, "Thank you, come again."             
+          </p>
+        </div>
+  
+        <div id="generation_1" class="tabContent">
+          <h3 class="tabCntTitle"></h3>
+          <p></p>
+        </div>
+  
+        <div id="generation_2" class="tabContent">
+          <h3 class="tabCntTitle"></h3>
+          <p></p>
+        </div>
       </div>
-      <!--
-      <button class="tabLink" onclick="openPage('Home', this, 'red')">Home</button>
-      -->
-      <div class="tabLink openTab">
-        <a class="tabTitle" id="1"color="blue"></a>
-      </div>
-      <div class="tabLink openTab">
-        <a class="tabTitle" id="2"color="orange"></a>
-      </div>
-      
-
-      <div id="generation_0" class="tabContent">
-        <h3 class="tabCntTitle"></h3>
-        <p></p>
-      </div>
-
-      <div id="generation_1" class="tabContent">
-        <h3 class="tabCntTitle"></h3>
-        <p></p>
-      </div>
-
-      <div id="generation_2" class="tabContent">
-        <h3 class="tabCntTitle"></h3>
-        <p></p>
-      </div>
-
     </main>
 
     <footer>
