--- a/2_front_end/7_final_tp/index.html
+++ b/2_front_end/7_final_tp/index.html
@@ -76,7 +76,7 @@
             <table>
               <thead> 
                 <tr>
-                  <th></th>
+                  <th>Select</th>
                   <th>Code</th>
                   <th>Item</th>
                   <th>Brand</th>
