--- a/2_front_end/7_final_tp/index.html
+++ b/2_front_end/7_final_tp/index.html
@@ -7,19 +7,23 @@
   </head>
   <body id="">
     
-    <header id="intro" class="header conteiner">
-      <div id="profile"><img src="img/profile.jpeg" alt=""></div>
-      <div id="" class="shop">
-        <h1 id="shop"></h1>
-        <h2 id="title"></h2>
+    <header >
+      <div id="intro" class="header flex-container">
+        <div id="profile"><img src="img/profile.jpeg" alt=""></div>
+        <div id="" class="shop">
+          <h1 id="shop"></h1>
+          <h2 id="title"></h2>
+        </div>
+        <!-- breve descripción.-->
+        <div id="bref">
+          <p id="legend">
+            <span class="cite"></span><span class="autor"></span>
+          </p>
+        </div>      
       </div>
-      <!-- breve descripción.-->
-      <div id="bref">
-        <p id="legend">
-          <span class="cite"></span><span class="autor"></span>
-        </p>
-      </div>
-      <nav>
+    </header>
+    <nav >
+      <div id="menu" class="menu flex-container" >
         <div id="nav" class="nav">
           <div class="tabLink openTab " id="defaultOpen" >
             <a class="tabTitle" id="0"color="red"></a>      
@@ -34,11 +38,10 @@
             <a class="tabTitle" id="2"color="orange"></a>
           </div>
         </div>
-      </nav>
-    </header>
-
+      </div>
+    </nav>
     <main >
-      <div id="main" class="main conteiner">
+      <div id="main" class="main flex-container">
         <!--HOME -->
         <div id="generation_0" class="tabContent">
           <h3 class="tabCntTitle"></h3>
@@ -201,7 +204,7 @@
     </main>
 
     <footer>
-      <div class="foot conteiner">
+      <div class="foot flex-container">
         <div class="contact">
           <h3 id="shop_F" class="shop"></h3>
           <p id="legend_F" class="legend"></p>
